--- a/python_tests/docker-compose.yml
+++ b/python_tests/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.8"
 services:
   echo:
-    build: ./echo
+    build: echo
     ports:
       - "9000:9000" # опционально, удобно для отладки
   nginx:
-    build: ./nginx
+    build: nginx
     depends_on: [echo]
     environment:
       - MY_SERVER=http:\\localhost:9000
