--- a/python_tests/nginx/nginx.conf
+++ b/python_tests/nginx/nginx.conf
@@ -6,12 +6,14 @@ pid        /tmp/nginx.pid;
 
 events { worker_connections 1024; }
 
+set $myserver ${MY_SERVER};
+
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
     sendfile      on;
 
-    upstream echo_upstream { server echo:9000; }
+    upstream echo_upstream { server python_echo:9000; }
 
     server {
         listen 8080;
@@ -20,8 +22,15 @@ http {
         # Удобная диагностика переписываний
         rewrite_log on;
 
-        # Набор локаций, которые тестируем
-        include /etc/nginx/conf.d/locations-under-test.conf;
+
+
+        location /api/v1/old-query {
+          rewrite ^/api/v1/old-query/(.*)$ /api/v2/$1 break;
+          proxy_set_header Host $host;
+          proxy_set_header X-Orig-Request-URI $request_uri;
+          proxy_set_header X-Uri $uri;
+          proxy_pass $myserver;
+        }
 
         # Явный fallback, чтобы видеть, что локация не сработала
         location / { return 404 "no test location matched\n"; }
