--- a/python_tests/docker-compose.yml
+++ b/python_tests/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.8"
 services:
-  echo:
+  python_echo:
     build: echo
     ports:
       - "9000:9000" # опционально, удобно для отладки
-  nginx:
+  python_nginx:
     build: nginx
-    depends_on: [echo]
+    depends_on: [python_echo]
     environment:
-      - MY_SERVER=http:\\localhost:9000
+      - MY_SERVER=http://localhost:8080
     ports:
       - "8080:8080"
