--- a/python_tests/nginx/nginx.conf
+++ b/python_tests/nginx/nginx.conf
@@ -6,8 +6,6 @@ pid        /tmp/nginx.pid;
 
 events { worker_connections 1024; }
 
-set $myserver ${MY_SERVER};
-
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
@@ -22,14 +20,12 @@ http {
         # Удобная диагностика переписываний
         rewrite_log on;
 
-
-
         location /api/v1/old-query {
           rewrite ^/api/v1/old-query/(.*)$ /api/v2/$1 break;
           proxy_set_header Host $host;
           proxy_set_header X-Orig-Request-URI $request_uri;
           proxy_set_header X-Uri $uri;
-          proxy_pass $myserver;
+          proxy_pass http://python_echo:9000;
         }
 
         # Явный fallback, чтобы видеть, что локация не сработала
